Fixed job build up buttons and spacings

--- a/Improvians/css/custom.css
+++ b/Improvians/css/custom.css
@@ -543,7 +543,7 @@ textarea.input__control {
 .header__bottom .bttn { padding-left: 15px; padding-right: 15px; }
 .header__bottom [class^="rxicon-"] { font-size: 24px; }
 
-.main { margin-top: 30px; }
+.main { margin-top: 25px; }
 .main .main { margin-top: 0; }
 
 /*Footer*/
